@@ -15,7 +15,6 @@
  <property name="cps_is_searchable">False</property>
  <property name="cps_proxy_type"></property>
  <property name="cps_display_as_document_in_listing">False</property>
- <property name="cps_is_portalbox">False</property>
  <alias from="(Default)" to="cpsskins_default_view"/>
  <alias from="delete" to="cpsskins_object_delete"/>
  <alias from="edit" to="cpsskins_edit_form"/>
