@@ -16,7 +16,6 @@
  <property name="cps_is_searchable">False</property>
  <property name="cps_proxy_type"></property>
  <property name="cps_display_as_document_in_listing">False</property>
- <property name="cps_is_portalbox">False</property>
  <alias from="(Default)" to="index_html"/>
  <alias from="edit" to="cpsskins_edit_form"/>
  <alias from="edit_form" to="cpsskins_edit_form"/>
