@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+
 <object name="Main Content Templet" meta_type="Factory-based Type Information"
    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
  <property name="title"></property>
@@ -15,7 +15,6 @@
  <property name="cps_is_searchable">False</property>
  <property name="cps_proxy_type"></property>
  <property name="cps_display_as_document_in_listing">False</property>
- <property name="cps_is_portalbox">False</property>
  <alias from="(Default)" to="index_html"/>
  <alias from="edit" to="cpsskins_edit_form"/>
  <alias from="edit_form" to="cpsskins_edit_form"/>
