@@ -53,7 +53,6 @@
  <property name="cps_is_searchable">False</property>
  <property name="cps_proxy_type"></property>
  <property name="cps_display_as_document_in_listing">False</property>
- <property name="cps_is_portalbox">False</property>
  <alias from="(Default)" to="folder_view"/>
  <alias from="view" to="folder_view"/>
  <action title="View" action_id="view" category="object" condition_expr=""
